--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,33 @@ jobs:
 
       - name: Run unit tests
         run: npm run test
+
+  build-image:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_PAT }}
+
+      - name: Set IMAGE_NAME env variable from secret
+        run: echo "IMAGE_NAME=stevelin100132-testing-app" >> $GITHUB_ENV
+
+      - name: Set image tag
+        id: tag
+        run: echo "TAG=latest" >> $GITHUB_ENV
+
+      - name: Build Docker image
+        run: |
+          docker build -t ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ env.TAG }} .
+
+      - name: Push Docker image
+        run: |
+          docker push ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
