--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
   build-image:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
+    needs: unit-test     # 等 unit-test 成功才執行
 
     steps:
       - name: Checkout code
@@ -46,10 +47,15 @@ jobs:
         id: tag
         run: echo "TAG=latest" >> $GITHUB_ENV
 
+      - name: Lowercase github.actor
+        run: echo "LOWER_ACTOR=${GITHUB_ACTOR,,}" >> $GITHUB_ENV
+        env:
+          GITHUB_ACTOR: ${{ github.actor }}
+
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ env.TAG }} .
+          docker build -t ghcr.io/$LOWER_ACTOR/${{ env.IMAGE_NAME }}:${{ env.TAG }} .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+          docker push ghcr.io/$LOWER_ACTOR/${{ env.IMAGE_NAME }}:${{ env.TAG }}
