--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: CI - main
 
 on:
   push:
-    branches: 'main'
+    branches:
+      - "main"
 
 jobs:
   unit-test:
@@ -10,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true # 一個 job fail，其他 job 會被取消
+      matrix:
+        node-version: [16, 18, 20]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -17,22 +20,41 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: "16"
 
       - name: Install dependencies
         run: npm install
 
       - name: Run unit tests
         run: npm run test
-      
+
       - name: Send Slack notification on failure
         if: failure()
-        run: |
-          curl -X POST -H 'Content-type: application/json' \
-          --data '{
-            "text": ":x: Unit tests failed in `${{ github.repository }}` on branch `${{ github.ref_name }}` by `${{ github.actor }}`.\nCheck run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          }' \
-          ${{ secrets.SLACK_WEBHOOK_URL }}
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+          payload: |
+            {
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "Unit tests failed",
+                    "emoji": false
+                  }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": ":x: Unit tests failed in `${{ github.repository }}` on branch `${{ github.ref_name }}` by `${{ github.actor }}`.\nCheck run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
   build-image:
     name: Build and Push Docker Image
